--- a/index.html
+++ b/index.html
@@ -80,10 +80,11 @@
   <header id="home" class="hero-bg d-flex align-items-center text-white text-center">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-lg-8">
-          <h1 class="display-3 fw-bold mb-4">
+        <div class="col-lg-8" style="margin-top: 50px;">
+          <h1 class="display-3 fw-bold mb-5">
             Lucky 7 Towing
           </h1>
+          <div class="my-5"></div>
           <p class="lead fs-4 mb-4">Fast. Reliable. 24/7 Emergency Towing Service.</p>
                      <div class="phone-number text-success mb-4">
              <i class="bi bi-telephone-fill me-2"></i>
