Update homepage content and styling for improved clarity and local focus

--- a/index.html
+++ b/index.html
@@ -80,12 +80,14 @@
   <header id="home" class="hero-bg d-flex align-items-center text-white text-center">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-lg-8" style="margin-top: 50px;">
+        <div class="col-lg-8" style="margin-top: 40px;">
+          <div class="d-none d-md-block" style="height: 40px;"></div>
           <h1 class="display-3 fw-bold mb-5">
             Lucky 7 Towing
           </h1>
           <div class="my-5"></div>
-          <p class="lead fs-4 mb-4">Fast. Reliable. 24/7 Emergency Towing Service.</p>
+          <p class="lead fs-4 mb-4">Fast. Reliable. 24/7 Emergency Towing Service.<br>
+          <span class="fs-5">Serving Rural Northeastern Wisconsin Communities</span></p>
                      <div class="phone-number text-success mb-4">
              <i class="bi bi-telephone-fill me-2"></i>
              (715) 853-8513
@@ -109,8 +111,8 @@
       <div class="row align-items-center">
         <div class="col-lg-6">
           <h2 class="display-5 fw-bold mb-4">About Lucky 7 Towing</h2>
-          <p class="lead">For over 10 years, Lucky 7 Towing has been the trusted name in professional towing and roadside assistance services.</p>
-          <p>We pride ourselves on providing fast, reliable, and professional service to our community. Whether you're stranded on the highway or need vehicle recovery, our experienced team is ready to help 24/7.</p>
+                      <p class="lead">For over 20 years, Lucky 7 Towing has been the trusted name in professional towing and roadside assistance services throughout rural Northeastern Wisconsin.</p>
+            <p>We proudly serve the communities of <strong>Shawano, Bonduel, Wittenberg, Navarino, Gresham, Pulaski</strong> and surrounding areas. Whether you're stranded on a country road or need vehicle recovery in town, our experienced team knows the local area and is ready to help 24/7.</p>
           <div class="row mt-4">
             <div class="col-sm-6">
               <div class="d-flex align-items-center mb-3">
@@ -124,10 +126,10 @@
             <div class="col-sm-6">
               <div class="d-flex align-items-center mb-3">
                 <i class="bi bi-geo-alt service-icon me-3"></i>
-                <div>
-                  <h5>Local & Long Distance</h5>
-                  <p class="mb-0">Serving locally and cross-state</p>
-                </div>
+                                 <div>
+                   <h5>Rural & Long Distance</h5>
+                   <p class="mb-0">Northeastern Wisconsin & cross-state</p>
+                 </div>
               </div>
             </div>
           </div>
@@ -250,10 +252,13 @@
           </div>
           
           <div class="row text-start">
-            <div class="col-md-6">
-              <h4><i class="bi bi-geo-alt me-2"></i>Service Area</h4>
-              <p>We serve the greater metropolitan area and surrounding regions with fast, reliable towing services.</p>
-            </div>
+                         <div class="col-md-6">
+               <h4><i class="bi bi-geo-alt me-2"></i>Service Area</h4>
+               <p><strong>Rural Northeastern Wisconsin:</strong><br>
+               Shawano • Bonduel • Wittenberg<br>
+               Navarino • Gresham • Pulaski<br>
+               <em>& surrounding communities</em></p>
+             </div>
             <div class="col-md-6">
               <h4><i class="bi bi-envelope me-2"></i>Contact Info</h4>
                              <p>
