Add favicon and apple touch icon links to index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lucky 7 Towing - Professional Towing Services</title>
   <meta name="description" content="Lucky 7 Towing offers 24/7 emergency towing, roadside assistance, and vehicle recovery services. Fast, reliable, and professional.">
+  <link rel="icon" type="image/jpeg" href="images/lucky7_logo_ai.jpg">
+  <link rel="apple-touch-icon" href="images/lucky7_logo_ai.jpg">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" rel="stylesheet">
   <style>
