Update service area in About section to include additional communities

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="col-lg-6">
           <h2 class="display-5 fw-bold mb-4">About Lucky 7 Towing</h2>
                       <p class="lead">For over 20 years, Lucky 7 Towing has been the trusted name in professional towing and roadside assistance services throughout rural Northeastern Wisconsin.</p>
-            <p>We proudly serve the communities of <strong>Shawano, Bonduel, Wittenberg, Navarino, Gresham, Pulaski</strong> and surrounding areas. Whether you're stranded on a country road or need vehicle recovery in town, our experienced team knows the local area and is ready to help 24/7.</p>
+            <p>We proudly serve the communities of <strong>Shawano, Bonduel, Wittenberg, Navarino, Gresham, Pulaski, Cecil, Keshena, and Gillet</strong> and surrounding areas. Whether you're stranded on a country road or need vehicle recovery in town, our experienced team knows the local area and is ready to help 24/7.</p>
           <div class="row mt-4">
             <div class="col-sm-6">
               <div class="d-flex align-items-center mb-3">
@@ -259,6 +259,7 @@
                <p><strong>Rural Northeastern Wisconsin:</strong><br>
                Shawano • Bonduel • Wittenberg<br>
                Navarino • Gresham • Pulaski<br>
+               Cecil • Keshena • Gillet<br>
                <em>& surrounding communities</em></p>
              </div>
             <div class="col-md-6">
