--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <div class="card-body text-center p-4">
               <i class="bi bi-tools service-icon mb-3"></i>
               <h5 class="card-title">Roadside Assistance</h5>
-              <p class="card-text">Locked out? Flat tire? Dead battery? Our roadside assistance team arrives within minutes to help with any situation.</p>
+              <p class="card-text">Locked out? Flat tire? Dead battery? Our roadside assistance team arrives swiftly to help with any situation.</p>
             </div>
           </div>
         </div>
