Adjust hero section height to 100vh for improved visual impact

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       background-position: center -30px;
       background-repeat: no-repeat;
       background-attachment: scroll;
-      min-height: 70vh;
+      height: 100vh;
       position: relative;
       overflow: hidden;
     }
