--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
           </h1>
           <div class="my-5"></div>
           <p class="lead fs-4 mb-4">Fast. Reliable. 24/7 Emergency Towing Service.<br>
-          <span class="fs-5">Serving Rural Northeastern Wisconsin Communities</span></p>
+          <span class="fs-5">Serving Rural Northeastern Wisconsin Communities</span><br>
+          <span class="fs-5 text-success"><strong>★ AAA Approved Provider ★</strong></span></p>
                      <div class="phone-number text-success mb-4">
              <i class="bi bi-telephone-fill me-2"></i>
              (715) 853-8513
@@ -144,6 +145,10 @@
           <h2 class="display-5 fw-bold mb-4">About Lucky 7 Towing</h2>
                       <p class="lead">For over 20 years, Lucky 7 Towing has been the trusted name in professional towing and roadside assistance services throughout rural Northeastern Wisconsin.</p>
             <p>We proudly serve the communities of <strong>Shawano, Bonduel, Wittenberg, Navarino, Gresham, Pulaski, Cecil, Keshena, and Gillet</strong> and surrounding areas. Whether you're stranded on a country road or need vehicle recovery in town, our experienced team knows the local area and is ready to help 24/7.</p>
+            <div class="alert alert-success mt-4" role="alert">
+              <h5><i class="bi bi-shield-check me-2"></i>AAA Approved Provider</h5>
+              <p class="mb-0">We are proud to be an authorized AAA service provider. Present your AAA membership card for coverage according to your membership benefits.</p>
+            </div>
           <div class="row mt-4">
             <div class="col-sm-6">
               <div class="d-flex align-items-center mb-3">
@@ -296,7 +301,8 @@
                              <p>
                  <strong>Phone:</strong> (715) 853-8513<br>
                  <strong>Email:</strong> mattsdvf@tds.net<br>
-                 <strong>Emergency:</strong> Available 24/7
+                 <strong>Emergency:</strong> Available 24/7<br>
+                 <strong>AAA Members:</strong> We accept AAA coverage
                </p>
             </div>
           </div>
