--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
       <div class="row align-items-center">
         <div class="col-lg-6">
           <h2 class="display-5 fw-bold mb-4">About Lucky 7 Towing</h2>
-                      <p class="lead">For over 20 years, Lucky 7 Towing has been the trusted name in professional towing and roadside assistance services throughout rural Northeastern Wisconsin.</p>
-            <p>We proudly serve the communities of <strong>Shawano, Bonduel, Wittenberg, Navarino, Gresham, Pulaski, Cecil, Keshena, and Gillet</strong> and surrounding areas. Whether you're stranded on a country road or need vehicle recovery in town, our experienced team knows the local area and is ready to help 24/7.</p>
+                      <p class="lead">For over 20 years, Lucky 7 Towing has been the trusted name in professional towing and roadside assistance across rural Northeastern Wisconsin.</p>
+            <p>We proudly serve the communities of <strong>Shawano, Bonduel, Wittenberg, Navarino, Gresham, Pulaski, Cecil, Keshena, and Gillett</strong>, along with the surrounding areas. Whether you're stranded on a country road or need vehicle recovery in town, our experienced team knows the local area and is ready to help — 24/7.</p>
             <div class="alert alert-success mt-4" role="alert">
               <h5><i class="bi bi-shield-check me-2"></i>AAA Approved Provider</h5>
               <p class="mb-0">We are proud to be an authorized AAA service provider. Present your AAA membership card for coverage according to your membership benefits.</p>
