--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lucky 7 Towing - Professional Towing Services</title>
-  <meta name="description" content="Lucky 7 Towing offers 24/7 emergency towing, roadside assistance, and vehicle recovery services. Fast, reliable, and professional.">
+  <title>Lucky 7 Towing | 24/7 Emergency Towing Shawano WI | AAA Approved</title>
+  <meta name="description" content="Lucky 7 Towing: 24/7 emergency towing & roadside assistance serving Shawano, Bonduel, Pulaski, Gillett & all rural Northeastern Wisconsin. AAA approved provider. Call (715) 853-8513.">
+  <meta name="keywords" content="towing Shawano, Bonduel towing, 24 hour roadside assistance, Gillett towing, Lucky 7 Towing, AAA towing Wisconsin, Wittenberg towing, Navarino towing, Gresham towing, Pulaski towing, Cecil towing, Keshena towing, emergency towing Wisconsin, rural towing service, northeastern Wisconsin towing, tow truck service, vehicle recovery, jump start service, flat tire repair, lockout service, fuel delivery">
+  <meta name="author" content="Lucky 7 Towing">
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="Lucky 7 Towing - 24/7 Emergency Towing & Roadside Assistance">
+  <meta property="og:description" content="Professional towing services across rural Northeastern Wisconsin. AAA approved provider serving Shawano, Bonduel, Pulaski, Gillett and surrounding areas.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://lucky7towingtransport.com">
+  <meta property="og:image" content="images/lucky7_logo_ai.jpg">
   <link rel="icon" type="image/jpeg" href="images/lucky7_logo_ai.jpg">
   <link rel="apple-touch-icon" href="images/lucky7_logo_ai.jpg">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
