Add structured data for SEO to index.html

--- a/index.html
+++ b/index.html
@@ -339,6 +339,163 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   
+  <!-- Structured Data for SEO -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "AutoRepair",
+    "name": "Lucky 7 Towing",
+    "alternateName": "Lucky 7 Transport",
+    "url": "https://lucky7towingtransport.com",
+    "logo": "https://lucky7towingtransport.com/images/lucky7_logo_ai.jpg",
+    "image": "https://lucky7towingtransport.com/images/lucky7_logo_ai.jpg",
+    "description": "Professional 24/7 emergency towing and roadside assistance serving rural Northeastern Wisconsin for over 20 years. AAA approved provider.",
+    "telephone": "+1-715-853-8513",
+    "email": "mattsdvf@tds.net",
+    "openingHours": "Mo-Su 00:00-23:59",
+    "priceRange": "$$",
+    "paymentAccepted": "Cash, Credit Card, AAA Coverage",
+    "currenciesAccepted": "USD",
+    "areaServed": [
+      {
+        "@type": "City",
+        "name": "Shawano",
+        "addressRegion": "WI"
+      },
+      {
+        "@type": "City", 
+        "name": "Bonduel",
+        "addressRegion": "WI"
+      },
+      {
+        "@type": "City",
+        "name": "Wittenberg", 
+        "addressRegion": "WI"
+      },
+      {
+        "@type": "City",
+        "name": "Navarino",
+        "addressRegion": "WI"
+      },
+      {
+        "@type": "City",
+        "name": "Gresham",
+        "addressRegion": "WI"
+      },
+      {
+        "@type": "City",
+        "name": "Pulaski",
+        "addressRegion": "WI"
+      },
+      {
+        "@type": "City",
+        "name": "Cecil",
+        "addressRegion": "WI"
+      },
+      {
+        "@type": "City",
+        "name": "Keshena", 
+        "addressRegion": "WI"
+      },
+             {
+         "@type": "City",
+         "name": "Gillett",
+         "addressRegion": "WI"
+       },
+       {
+         "@type": "City",
+         "name": "Appleton",
+         "addressRegion": "WI"
+       }
+     ],
+    "address": {
+      "@type": "PostalAddress",
+      "addressRegion": "WI",
+      "addressCountry": "US",
+      "addressLocality": "Northeastern Wisconsin"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": "44.7811",
+      "longitude": "-88.6092"
+    },
+    "hasOfferCatalog": {
+      "@type": "OfferCatalog",
+      "name": "Towing and Roadside Services",
+      "itemListElement": [
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Emergency Towing",
+            "description": "24/7 emergency towing services for all types of vehicles"
+          }
+        },
+        {
+          "@type": "Offer", 
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Roadside Assistance",
+            "description": "Lockout service, flat tire repair, dead battery assistance"
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service", 
+            "name": "Long-Distance Towing",
+            "description": "Safe and secure towing across state lines"
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Vehicle Recovery", 
+            "description": "Accident recovery and vehicle extraction services"
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Jump Start Service",
+            "description": "Fast and safe jump start services for dead batteries"
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Fuel Delivery",
+            "description": "Emergency fuel delivery service"
+          }
+        }
+      ]
+    },
+    "additionalProperty": [
+      {
+        "@type": "PropertyValue",
+        "name": "AAA Approved",
+        "value": "Yes"
+      },
+      {
+        "@type": "PropertyValue", 
+        "name": "Years in Business",
+        "value": "20+"
+      },
+      {
+        "@type": "PropertyValue",
+        "name": "Service Area",
+        "value": "Rural Northeastern Wisconsin"
+      }
+    ],
+    "sameAs": [
+      "https://lucky7towingtransport.com"
+    ]
+  }
+  </script>
+  
   <!-- Smooth scrolling for navigation links -->
   <script>
     document.querySelectorAll('a[href^="#"]').forEach(anchor => {
