--- a/index.html
+++ b/index.html
@@ -12,9 +12,16 @@
   <meta property="og:description" content="Professional towing services across rural Northeastern Wisconsin. AAA approved provider serving Shawano, Bonduel, Pulaski, Gillett and surrounding areas.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://lucky7towingtransport.com">
-  <meta property="og:image" content="images/lucky7_logo_ai.jpg">
-  <link rel="icon" type="image/jpeg" href="images/lucky7_logo_ai.jpg">
-  <link rel="apple-touch-icon" href="images/lucky7_logo_ai.jpg">
+  <meta property="og:image" content="https://lucky7towingtransport.com/images/lucky7_logo_ai.jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="https://lucky7towingtransport.com/images/lucky7_logo_ai.jpg">
+  <link rel="icon" type="image/jpeg" href="https://lucky7towingtransport.com/images/lucky7_logo_ai.jpg">
+  <link rel="apple-touch-icon" href="https://lucky7towingtransport.com/images/lucky7_logo_ai.jpg">
+  <link rel="shortcut icon" href="https://lucky7towingtransport.com/images/lucky7_logo_ai.jpg">
+  <link rel="icon" sizes="192x192" href="https://lucky7towingtransport.com/images/lucky7_logo_ai.jpg">
+  <link rel="icon" sizes="512x512" href="https://lucky7towingtransport.com/images/lucky7_logo_ai.jpg">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" rel="stylesheet">
   <style>
