Update keywords in index.html for improved SEO and add structured data for team members

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lucky 7 Towing | 24/7 Emergency Towing Shawano WI | AAA Approved</title>
   <meta name="description" content="Lucky 7 Towing: 24/7 emergency towing & roadside assistance serving Shawano, Bonduel, Pulaski, Gillett & all rural Northeastern Wisconsin. AAA approved provider. Call (715) 853-8513.">
-  <meta name="keywords" content="towing Shawano, Bonduel towing, 24 hour roadside assistance, Gillett towing, Lucky 7 Towing, AAA towing Wisconsin, Wittenberg towing, Navarino towing, Gresham towing, Pulaski towing, Cecil towing, Keshena towing, emergency towing Wisconsin, rural towing service, northeastern Wisconsin towing, tow truck service, vehicle recovery, jump start service, flat tire repair, lockout service, fuel delivery">
+  <meta name="keywords" content="towing Shawano, Bonduel towing, 24 hour roadside assistance, Gillett towing, Lucky 7 Towing, AAA towing Wisconsin, Wittenberg towing, Navarino towing, Gresham towing, Pulaski towing, Cecil towing, Keshena towing, emergency towing Wisconsin, rural towing service, northeastern Wisconsin towing, tow truck service, vehicle recovery, jump start service, flat tire repair, lockout service, fuel delivery, Matthew Torphy, Matt Torphy, Calvin Berndt, website design">
   <meta name="author" content="Lucky 7 Towing">
   <meta name="robots" content="index, follow">
   <meta property="og:title" content="Lucky 7 Towing - 24/7 Emergency Towing & Roadside Assistance">
@@ -497,11 +497,26 @@
         "value": "Rural Northeastern Wisconsin"
       }
     ],
-    "sameAs": [
-      "https://lucky7towingtransport.com"
-    ]
-  }
-  </script>
+         "founder": {
+       "@type": "Person",
+       "name": "Matthew Torphy",
+       "alternateName": "Matt Torphy"
+     },
+     "employee": {
+       "@type": "Person", 
+       "name": "Matthew Torphy",
+       "jobTitle": "Owner/Operator"
+     },
+     "creator": {
+       "@type": "Person",
+       "name": "Calvin Berndt",
+       "jobTitle": "Web Developer"
+     },
+     "sameAs": [
+       "https://lucky7towingtransport.com"
+     ]
+   }
+   </script>
   
   <!-- Smooth scrolling for navigation links -->
   <script>
